Add let-polymorphism and typechecking tests

--- a/haskell-proglang.cabal
+++ b/haskell-proglang.cabal
@@ -58,7 +58,10 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules: LambdaCalc, Parser, Prototypes.OlegConstraintsTypechecker
+    exposed-modules:    LambdaCalc,
+                        Parser,
+                        Prototypes.OlegConstraintsTypechecker, 
+                        Prototypes.OlegParser
 
     -- Modules included in this library but not exported.
     -- other-modules:
